--- a/Survival Analysis-SHOPKO.CO/README
+++ b/Survival Analysis-SHOPKO.CO/README
@@ -1,3 +1,2 @@
-Developed a unsupervised learning algorithm on the scanner data of SHOPKO retail chain store 
-to segment customers based on their shopping history.
+Developed a unsupervised learning algorithm on the scanner data of SHOPKO retail chain store to segment customers based on their shopping history.
 Applied affinity analysis, elasticity modelling and survival analysis to increase revenue by 2.7%. 
