--- a/Survival Analysis-SHOPKO.CO/README
+++ b/Survival Analysis-SHOPKO.CO/README
@@ -1,2 +1,3 @@
-Developed a unsupervised learning algorithm on the scanner data of SHOPKO retail chain store to segment customers based on their shopping history.
+Developed strategic insights to improve the business of SHOPKO retailchain. 
+Segmented the customers using a unsupervised learning algorithm.
 Applied affinity analysis, elasticity modelling and survival analysis to increase revenue by 2.7%. 
