--- a/Data Science/README
+++ b/Data Science/README
@@ -1,1 +1,1 @@
-This folder contains all the codes pertaining to certifications coursework 
+This folder contains all the codes pertaining to online certifications
