--- a/Data Science/README
+++ b/Data Science/README
@@ -1,1 +1,1 @@
-This folder contains all the codes pertaining to online certifications
+This folder contains Assignment/Project codes pertaining to online certifications
